--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
