--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
