--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.1",
     "flowbite-react": "^0.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
-    "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "prisma": "^6.8.2",
     "react": "^18",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
-    "swr": "^2.2.5",
+    "swr": "^2.3.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
