--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.1",
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.511.0",
     "mongodb": "^6.6.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
