--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.6.1",
     "flowbite-react": "^0.9.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.511.0",
     "mongodb": "^6.6.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
